syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "account.proto";
import "activity.proto";
import "instance.proto";
import "instancev1.proto";
import "rule.proto";
import "status.proto";
import "context.proto";

option csharp_namespace = "Mastodon.Grpc";

service Mastodon {
  rpc GetInstance (google.protobuf.Empty) returns (Instance)
  {
	option (google.api.http) = {
      get: "/api/v2/instance"
    };
  }
  rpc GetInstanceV1 (google.protobuf.Empty) returns (InstanceV1)
  {
	option (google.api.http) = {
      get: "/api/v1/instance"
    };
  }
  
  rpc GetActivities (google.protobuf.Empty) returns (Activities)
  {
	option (google.api.http) = {
      get: "/api/v1/instance/activity"
      response_body: "data"
    };
  }
  
  rpc GetRules (google.protobuf.Empty) returns (Rules)
  {
	option (google.api.http) = {
      get: "/api/v1/instance/rules"
      response_body: "data"
    };
  }

  rpc GetAccountById (google.protobuf.StringValue) returns (Account)
  {
	option (google.api.http) = {
      get: "/api/v1/accounts/{value}"
    };
  }

  rpc GetAccountStatusesById (GetAccountStatusesByIdRequest) returns (Statuses)
  {
	option (google.api.http) = {
      get: "/api/v1/accounts/{accountId}/statuses"
      response_body: "data"
    };
  }

  rpc GetStatusById (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}"
    };
  }

  rpc GetStatusContextById (google.protobuf.StringValue) returns (Context)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}/context"
    };
  }
}

message GetAccountStatusesByIdRequest
{
    // Account ID.
    string accountId = 1;

    // Return results older than this ID.
    optional string max_id = 2;
    
    // Return results newer than this ID.
    optional string since_id = 3;

    // Return results immediately newer than this ID.
    optional string min_id = 4;

    // Maximum number of results to return. Defaults to 20 statuses. Max 40 statuses.
    optional uint32 limit = 5;

    // Filter out statuses without attachments.
    optional bool only_media = 6;

    // Filter out statuses in reply to a different account.
    optional bool exclude_replies = 7;

    // Filter out boosts from the response.
    optional bool exclude_reblogs = 8;

    // Filter for pinned statuses only.
    optional bool pinned = 9;

    // Filter for statuses using a specific hashtag.
    optional string tagged = 10;
}